[package]
name = "torpt"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
publish = false

[dependencies]
anyhow = "1.0.72"
arti-client = { path = "./arti/crates/arti-client", features = [ "bridge-client", "pt-client", "experimental" ] }
clap = { version = "4.3.21", features = ["derive", "wrap_help"] }
fast-socks5 = "0.9.1"
thiserror = "1.0.44"
tokio = { version = "1.7", features = ["full"] }
tokio-stream = "0.1.14"
tor-chanmgr = { path = "./arti/crates/tor-chanmgr", features = ["pt-client"] }
tor-linkspec = { path = "./arti/crates/tor-linkspec" }
tor-ptmgr = { path = "./arti/crates/tor-ptmgr", features = [ "experimental-api"] }
tor-rtcompat = { path = "./arti/crates/tor-rtcompat" }
tor-socksproto = { path = "./arti/crates/tor-socksproto" }
tracing = "0.1"
tracing-subscriber = "0.3.17"
rangemap = "~1.4.0" # 1.5 breaks tor-geoip